test/files/events-exp-lang-neg/types-missing.scala
import scala.events._

class C{
  imperative evt e1[Int]

  evt e2(x) = e1(x)
}
